--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.3.0'  // Ensure proper plugin version
+    }
+}
+
 allprojects {
     repositories {
         google()
