--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   provider: ^6.1.2
   hexcolor: ^3.0.1
   google_sign_in: ^6.2.1
+  http: ^1.2.2
+  shared_preferences: ^2.3.2
+  cool_alert: ^2.0.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -82,17 +86,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: poppins
+      fonts:
+        - asset: asset/fonts/Poppins/Poppins-Medium.ttf
+        - asset: asset/fonts/Poppins/Poppins-MediumItalic.ttf
+          style: italic
+    - family: poppins_regular
+      fonts:
+        - asset: asset/fonts/Poppins/Poppins-Regular.ttf
+         
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
