--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,16 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+	<array>
+  		<dict>
+   	 		<key>CFBundleURLName</key>
+    		<string>com.yourcompany.yourapp</string>
+    		<key>CFBundleURLSchemes</key>
+     		<array>
+    		  <string>myapp</string>
+    		</array>
+  		</dict>
+	</array>
 </dict>
 </plist>
