--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   shared_preferences: ^2.3.2
   cool_alert: ^2.0.1
   url_launcher: ^6.3.1
+  app_links: ^6.3.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
